<resources>
    <string name="app_name">Elderly Watch v2</string>
    <string name="title_log_in">Log in</string>
    <string name="title_register">Register</string>
    <string name="title_account">Data Akun</string>
    <string name="title_profile">Data Diri</string>
    <string name="title_patient">DAFTAR PASIEN</string>

    <!--LOGIN PAGE-->
    <string name="setup_ip">Set new address</string>
    <string name="example_ip">192.168.1.1</string>
    <string name="example_port">80</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_log_in">Log In</string>
    <string name="button_log_out">Log Out</string>
    <string name="button_setting">Setting</string>
    <string name="button_register">Register</string>

    <!--REGISTER PAGE-->
    <string name="role_prompt">Peran</string>
    <string name="role_doctor">DOKTER</string>
    <string-array name="login_role">
        <item>Pasien</item>
        <item>Keluarga</item>
        <item>Dokter</item>
    </string-array>

    <!--PROFILE PAGE-->
    <string name="submit_data">Simpan Data</string>
    <string name="cancel">Batal</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="address">Alamat</string>
    <string name="phone_number">Nomor Telpon</string>
    <string name="phone_number_hint">Nomor Telpon (081xxxxxxxx)</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="birth_day">dd</string>
    <string name="birth_month">mm</string>
    <string name="birth_year">yyyy</string>
</resources>
