<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/text_full_name"
            android:hint="@string/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/text_address"
            android:hint="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/text_phone_number"
            android:inputType="phone"
            android:hint="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/text_birth_date"
            android:inputType="date"
            android:hint="@string/birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_submit"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_data"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            app:backgroundTint="@color/colorAccent" />
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>
    </LinearLayout>
</ScrollView>