<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/text_username"
        android:hint="@string/hint_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/text_password"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="8dp"
        android:text="@string/role_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner_role"
        android:padding="12dp"
        android:entries="@array/login_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_register"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorAccent" />

</LinearLayout>
